Fix: Update page title, add logo favicon, fix homepage navigation

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,12 +1,11 @@
-// frontend/index.html
-
 <!doctype html>
-<html lang="en">
+<html lang="vi">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>frontend</title>
+    <title>Cùng Bạn Lắng Nghe - Trợ lý tâm lý học đường AI</title>
+    <meta name="description" content="Nền tảng hỗ trợ tâm lý học đường miễn phí và ẩn danh cho học sinh, sinh viên Việt Nam" />
   </head>
   <body>
     <div id="root"></div>
